@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2019, 2020 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -83,7 +83,7 @@
                         <configuration>
                             <includeArtifactIds>gmbal-api-only</includeArtifactIds>
                             <classifier>sources</classifier>
-                            <excludes>**/pfl/**,META-INF/**</excludes>
+                            <excludes>module-info.*,**/pfl/**,META-INF/**</excludes>
                             <outputDirectory>${project.build.directory}/generated-sources/api</outputDirectory>
                         </configuration>
                     </execution>
@@ -104,6 +104,22 @@
                             <sources>
                                 <source>${project.build.directory}/generated-sources/api</source>
                             </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <compilerArgs>
+                                <arg>-Xlint:all</arg>
+                                <arg>--add-reads</arg>
+                                <arg>gmbal=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
@@ -134,6 +150,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>META-INF/jpms.args</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
